tests/build/cases/widget_new/incorrect_arg_type4.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
   --> cases/widget_new/incorrect_arg_type4.rs:10:20
    |
8   |         background_gradient = {
    |                               - required by a bound introduced by this call
9   |             axis: 0.deg(),
10  |             stops: true
    |                    ^^^^ expected an implementor of trait `IntoVar<GradientStops>`
    |
note: required by `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
   --> $WORKSPACE/zero-ui/src/properties/visual.rs
    |
    | / #[property(inner, default(0.deg(), {
    | |     let c = colors::BLACK.transparent();
    | |     crate::core::gradient::stops![c, c]
    | | }))]
    | |____^
    = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider borrowing here
    |
10  |             stops: &true
    |                    +
